# WayTrans

./: CMakeLists.txt  README.md  main.cpp  qwayland-primary-selection-unstable-v1.cpp  qwayland-primary-selection-unstable-v1.h  qwayland-wlr-data-control-unstable-v1.cpp  qwayland-wlr-data-control-unstable-v1.h  wayland-primary-selection-unstable-v1-client-protocol.h  wayland-primary-selection-unstable-v1-protocol.c  wayland-wlr-data-control-unstable-v1-client-protocol.h  wayland-wlr-data-control-unstable-v1-protocol.c  waylandselectionlistener.cpp  waylandselectionlistener.h  widget.cpp  widget.h
